2008-12-08  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/mainwin.cpp: Make menu acceleration keys unique.
	[ Bugzilla 1000618 ]

2008-08-15  Bart Veer  <bartv@ecoscentric.com>

	* common/common/build.cxx: avoid compiler warning.

2008-08-13  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/configitem.cpp: Fix assert on ecDoubleEditorCtrl
	option type. Initialise wxSpinCtrl with valid integer value. Do not
	end editing when clicking within value window.
	
	* standalone/wxwin/configtool.cpp: Move Tcl and wxMenu initialisation
	from class contructor to OnInit() method for compatibility with recent
	wxWidgets. Tweak host tool directory path calculation for compatibility
	with recent wxWidgets under Cygwin.
	
	* standalone/wxwin/configtooldoc.cpp: Suppress copying of MLT files.
	
	* standalone/wxwin/configtree.cpp: Always end editing when clicking
	elsewhere in the value window.
	
	* standalone/wxwin/configtree.cpp, standalone/wxwin/configtree.h: Do
	not handle EVT_PAINT, EVT_TREE_ITEM_EXPANDED and EVT_TREE_ITEM_COLLAPSED
	events unless strictly necessary.
	
	* standalone/wxwin/settingsdlg.cpp: Use GetClientSize() to size the
	wxNotebook.
	
	* standalone/wxwin/appsettings.cpp: Use the internal documentation
	browser by default.

2008-03-25  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/ecutils.cpp: Use PATH_MAX instead of MAXPATHLEN
	for compatibility with recent Cygwin headers.
	* standalone/wxwin/appsettings.cpp: Omit hardware packages in the
	packages dialog and use TCP port 9000 for remote debugging by default.

2008-03-03  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/configitem.cpp: Do not delete the package item
	object before unloading a package.
	* standalone/wxwin/configtooldoc.cpp,
	  standalone/wxwin/configtree.cpp: Delete the package item object
	after unloading a package.

2008-02-11  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/configitem.cpp: Fix memory leak when unloading a